Correções e adicionada foto no mais informações

--- a/app/maisInfos.html
+++ b/app/maisInfos.html
@@ -76,7 +76,7 @@
                     <ul class="list">
                         <li>Graduando em Análise e Desenvolvimento de Sistemas.</li>
                         <li>Especialização em programação web.</li>
-                        <img src="../assets/viniFoto.png" alt="">
+                        <img src="../assets/CauaFoto.jpg" alt="">
                     </ul>
                 </div>
             </div>
