--- a/app/telaInicial.html
+++ b/app/telaInicial.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="../style/reset.css">
     <link rel="stylesheet" href="../style/info.css">
-    <link rel="stylesheet" href="../style/header.css">
     <link rel="stylesheet" href="../style/corrossel.css">
+    <link rel="stylesheet" href="../style/header.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Vina+Sans&display=swap" rel="stylesheet">
@@ -38,15 +38,10 @@
                 RECICLAR
             </h1>
             <p class="info__paragrafo">
-                Lorem Ipsum is simply dummy text of the printing and
-                typesetting industry. Lorem Ipsum has been the industry's
-                standard dummy text ever since the 1500s, when an unknown printer
-                took a galley of type and scrambled it to make a type specimen book.
-                It has survived not only five centuries, but also the leap into electronic
-                typesetting, remaining essentially unchanged. It was popularised in the
-                1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                and more recently with desktop publishing software
-                like Aldus PageMaker including versions of Lorem Ipsum.
+                Reciclar é transformar materiais que seriam lixo em novos produtos, 
+                economizando recursos, energia e espaço. Reciclar ajuda a proteger o 
+                meio ambiente, gerar empregos, conscientizar as pessoas e estimular a inovação.
+                 Reciclar é uma prática fundamental para um futuro sustentável.
             </p>
         </div>
         <div class="carrossel">
