--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
         Recycle Info
     </h2>
     <div class="header__tabs">
-        <a class="tab" href="telaInicial.html">Inicio</a>
+        <a class="tab" href="index.html">Inicio</a>
 
         <a class="tab" href="saibaMais.html">Saiba Mais</a>
 
